fix: overflow of preferences menu

--- a/src/css/utils/_display.scss
+++ b/src/css/utils/_display.scss
@@ -21,6 +21,9 @@
 .flex-grow {
   flex-grow: 1;
 }
+.flex-shrink {
+  flex-shrink: 1;
+}
 
 .flex-wrap {
   flex-wrap: wrap;
