--- a/src/css/utils/_width.scss
+++ b/src/css/utils/_width.scss
@@ -6,6 +6,10 @@
   width: 100%;
 }
 
+.w-100vw {
+  width: 100vw;
+}
+
 .w-0 {
   width: 0;
 }
